--- a/src/App.css
+++ b/src/App.css
@@ -13,20 +13,22 @@
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
 
 .App-link {
   color: #61dafb;
 }
+
+.circle {
+  display: flex;
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  background-color: red;
+}
+circle:focus {
+  outline: 2px solid;
+}
+
 
 @keyframes App-logo-spin {
   from {
@@ -36,3 +38,4 @@
     transform: rotate(360deg);
   }
 }
+
